--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
-    "start":"webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/LeandroSCoutinho/whatsapp-clone#readme",
   "dependencies": {
+    "pdfjs-dist": "^3.4.120",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
   }
